--- a/perceptron_delta_lab/pubspec.yaml
+++ b/perceptron_delta_lab/pubspec.yaml
@@ -52,13 +52,11 @@ flutter:
     - assets/langs/
     - assets/icon/
 
-  #
-  #  fonts:
-  #    - family: Roboto
-  #      fonts:
-  #        - asset: assets/fonts/Roboto-Regular.ttf
-  #        - asset: assets/fonts/Roboto-Bold.ttf
-  #          weight: 700
-  #        - asset: assets/fonts/Roboto-Medium.ttf
-  #          weight: 500
-  #
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Roboto-Medium.ttf
+          weight: 500
